--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,13 +3,13 @@ name: Build and Release APK
 on:
   push:
     tags:
-      - 'v*' # Trigger saat push tag seperti v1.0, v1.1
+      - 'v*'
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Izin untuk upload release
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
@@ -19,22 +19,21 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
 
     - name: Build APK
-      run: ./gradlew assembleDebug
+      run: gradle assembleDebug
 
     - name: Rename APK
-      run: mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/RootRunner.apk
+      # Path berubah: bukan app/build/... tapi langsung build/...
+      run: mv build/outputs/apk/debug/app-debug.apk build/outputs/apk/debug/RootRunner.apk
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: app/build/outputs/apk/debug/RootRunner.apk
-        body_path: README.md # Menggunakan README sebagai deskripsi release
+        files: build/outputs/apk/debug/RootRunner.apk
+        body_path: README.md
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
