--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
-name: Build and Release APK
+name: Manual Build & Release
 
 on:
+  # Memungkinkan dijalankan manual dari tab Actions di web GitHub
+  workflow_dispatch:
+  # Tetap otomatis jalan jika ada push tag versi (v1.0, dll)
   push:
     tags:
       - 'v*'
@@ -12,28 +15,40 @@ jobs:
       contents: write
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v4
 
-    - name: set up JDK 17
-      uses: actions/setup-java@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
 
+    # Menggunakan Gradle Action agar tidak butuh file 'gradlew' di repo
     - name: Setup Gradle
-      uses: gradle/gradle-build-action@v2
+      uses: gradle/actions/setup-gradle@v3
 
-    - name: Build APK
+    - name: Build Debug APK
       run: gradle assembleDebug
 
-    - name: Rename APK
-      # Path berubah: bukan app/build/... tapi langsung build/...
-      run: mv build/outputs/apk/debug/app-debug.apk build/outputs/apk/debug/RootRunner.apk
+    - name: Prepare Artifact
+      run: |
+        mkdir -p output
+        cp build/outputs/apk/debug/app-debug.apk output/RootRunner-Debug.apk
 
-    - name: Create Release
-      uses: softprops/action-gh-release@v1
+    # Upload file agar bisa didownload langsung dari halaman Actions (meskipun tidak release)
+    - name: Upload APK to Actions
+      uses: actions/upload-artifact@v4
       with:
-        files: build/outputs/apk/debug/RootRunner.apk
-        body_path: README.md
+        name: RootRunner-Build
+        path: output/RootRunner-Debug.apk
+
+    # Membuat release jika dipicu oleh TAG (v*) atau manual
+    - name: Create GitHub Release
+      if: startsWith(github.ref, 'refs/tags/v')
+      uses: softprops/action-gh-release@v2
+      with:
+        files: output/RootRunner-Debug.apk
+        generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
